--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -107,7 +107,8 @@
         left: 0;
     }
     .open-btn {
-        background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_623433640182018052936.png) no-repeat right center;
+        background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_473704740182018052947.png) no-repeat right center;
+        background-size: contain;
         left: inherit;
         right: 0;
     }
