--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -95,7 +95,7 @@
         background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_623433640182018052936.png) no-repeat;
         background-size: contain;
         position: fixed;
-        left: 0;
+        left: 10px;
         top: 50%;
         transform: translateY(-50%);
         z-index: 11;
@@ -110,6 +110,6 @@
         background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_473704740182018052947.png) no-repeat right center;
         background-size: contain;
         left: inherit;
-        right: 0;
+        right: 10px;
     }
 }
