--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ h6 {
   letter-spacing: 2px;
   overflow: hidden;
   position: relative;
+  text-align: center;
   transition: 0.35s ease all; }
   @media screen and (min-width: 1025px) {
     .yannick .btn:hover {
@@ -1133,16 +1134,19 @@ body {
   padding: 80px 0;
   background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_516082533152018052525.png) no-repeat left bottom, #e4e5e7;
   transition: all .3s ease;
-  background-size: 100%; }
+  background-size: 80%; }
   @media screen and (max-width: 1200px) {
     .yannick .card {
       background-size: 98%;
       background-position: -100px bottom; } }
   @media screen and (max-width: 767px) {
     .yannick .card {
-      padding: 60px 0 160px;
+      padding: 60px 0 285px;
       background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_271513633152018052536.png) no-repeat left bottom, #e4e5e7;
       background-size: contain; } }
+  @media screen and (max-width: 374px) {
+    .yannick .card {
+      padding-bottom: 240px; } }
   .yannick .card .main {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1199,7 +1203,8 @@ body {
       letter-spacing: 1.3px; }
   @media screen and (max-width: 767px) {
     .yannick .card h3 span {
-      display: block; } }
+      display: block;
+      font-size: 4vw; } }
   @media screen and (max-width: 767px) {
     .yannick .card h3 .none-m {
       display: none; } }
@@ -1374,14 +1379,18 @@ body {
       .yannick .product p {
         font-size: 1.4rem; } }
     .yannick .product p.cheese {
-      margin-bottom: 13px; }
+      margin-bottom: 15px; }
       @media screen and (max-width: 767px) {
         .yannick .product p.cheese {
           margin-bottom: 20px; } }
   .yannick .product .price {
     font-size: 24px;
     font-size: 2.4rem;
-    font-weight: bold; }
+    font-weight: bold;
+    margin-bottom: 42px; }
+    @media screen and (max-width: 767px) {
+      .yannick .product .price {
+        margin-bottom: 25px; } }
   @media screen and (max-width: 767px) {
     .yannick .product .line-red {
       width: 90%;
@@ -1390,14 +1399,20 @@ body {
       bottom: 2px; }
       .yannick .product .line-red img {
         height: 100% !important; } }
-
-.yannick .exclusive span {
-  font-weight: normal; }
-  .yannick .exclusive span span {
-    font-weight: normal; }
-
-.yannick .exclusive .red {
-  font-weight: bold; }
+  .yannick .product .exclusive {
+    margin-bottom: 20px; }
+    @media screen and (max-width: 767px) {
+      .yannick .product .exclusive {
+        margin-bottom: 25px; } }
+    .yannick .product .exclusive span {
+      font-weight: normal; }
+      .yannick .product .exclusive span span {
+        font-weight: normal; }
+    .yannick .product .exclusive .red {
+      font-weight: bold; }
+  @media screen and (max-width: 767px) {
+    .yannick .product .btn {
+      width: 100%; } }
 
 .yannick .org {
   color: #a9a9a9;
@@ -1548,10 +1563,10 @@ body {
           font-size: 1.7rem; } }
       @media screen and (max-width: 413px) {
         .yannick .ytmInfo li:first-child {
-          font-size: 1.6rem; } }
+          font-size: 1.5rem; } }
       @media screen and (max-width: 374px) {
         .yannick .ytmInfo li:first-child {
-          font-size: 1.4rem; } }
+          font-size: 1.3rem; } }
     .yannick .ytmInfo li:nth-child(2) {
       font-size: 15px;
       font-size: 1.5rem;
@@ -1563,7 +1578,7 @@ body {
           margin-bottom: 15px; } }
       @media screen and (max-width: 374px) {
         .yannick .ytmInfo li:nth-child(2) {
-          font-size: 1.4rem; } }
+          font-size: 1.3rem; } }
       .yannick .ytmInfo li:nth-child(2) span {
         display: block; }
     .yannick .ytmInfo li:nth-child(4) {
@@ -1683,7 +1698,7 @@ body {
   .yannick .feature .cake .icon {
     width: 116px; }
   .yannick .feature .pay .icon {
-    width: 93px; }
+    width: 95px; }
   .yannick .feature .buy .icon {
     width: 91px; }
 
@@ -1725,8 +1740,10 @@ body {
       margin-top: 30px; } }
 
 .yannick .location .redBox {
-  width: 27%;
-  background: #e10012; }
+  width: 140px;
+  background: #e10012;
+  -ms-flex-negative: 0;
+  flex-shrink: 0; }
   @media screen and (max-width: 1024px) {
     .yannick .location .redBox {
       width: 10%; } }
