--- a/sass/_partials.scss
+++ b/sass/_partials.scss
@@ -165,6 +165,7 @@
         letter-spacing: 2px;
         overflow: hidden;
         position: relative;
+        text-align: center;
         @include transition(.35s ease all);
         @include hover {
             line-height: 9em;
